# ax-induction-course

./: README.md  csharp_mvc.md  env.md  git.md  python-training.md  python_react.md  react-training.md  web-app-traing.md
dev/my-gatsby-site/: gatsby-browser.jsx  package-lock.json  package.json
dev/my-gatsby-site/src/components/: Layout.js
dev/my-gatsby-site/src/pages/: import.js  index.js  new.js
dev/python_training/01class_sample/: calc.py  main.py
dev/python_training/02iteration_sample/: iteration_sample.py  test.py
dev/python_training/03if_sample/: if_sample.py
dev/python_training/04recursion_sample/: recursion_sample.py
dev/python_training/05read_write_sample/: read_write_sample.py
dev/python_training/06exception_handling_sample/: exception_handling_sample.py
dev/tutorial/: pyproject.toml
dev/web-app/frontend/: index.html  new.html
dev/web-app/frontend/scripts/: register.js  search.js
dev/web-app/user_app/: pyproject.toml
dev/web-app/user_app/user/: models.py  urls.py  views.py
dev/web-app/user_app/user/migrations/: 0001_initial.py
dev/web-app/user_app/user_app/: settings.py  urls.py
my-gatsby-site/: package.json
python_training/01class_sample/: calc.py  main.py
python_training/02iteration_sample/: iteration_sample.py
python_training/03recursion_sample/: recursion_sample.py
python_training/04read_write_sample/: read_write_sample.py
python_training/05exception_handling_sample/: exception_handling_sample.py
tutorial/tutorial/: settings.py
